added content on about-page

--- a/pages/About-page.html
+++ b/pages/About-page.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../Css/style.css">
     <!--Responsive-->
     <link rel="stylesheet" href="../Css/style1.css">
+    <!--Font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!--Navigation Start-->
@@ -50,6 +52,52 @@
         </div>
     </div>
     <!--Header end-->
+
+    <!--About content-1 start-->
+    <div class="container-fluid about-container">
+        <div class="row">
+            <div class="col-5 logo">
+                <img class="img-fluid logo-img" src="../photos/logo.png" alt="">
+            </div>
+
+            <div class="col-lg-7 col-sm-12 our-story">
+                <h2>Our Story</h2>
+                <p>
+                    Kathy's bw was established in Surallah, South Cotabato in 2020. Our main objective has always been to 
+                    provide high-quality beauty and wellness services to our valued customers. With a team of skilled professionals,
+                    Kathy's BW strives to create a relaxing and rejuvenating experience for every client who walks through our doors.
+                </p>
+                <p>
+                    In Kathy's Beauty and Wellness, each treatment tells a unique story of personal transformation. From luxurious spa treatments to advanced skincare therapies, the dedicated team of professionals ensures that every client receives tailored services to enhance their natural beauty and promote overall well-being.
+                </p>
+            </div>
+        </div>
+    </div>
+    <!--About content-1 end-->
+
+    <!--About image start-->
+    <div class="container-fluid">
+        <img src="../photos/kathys-bw-store.jpg" class="img-fluid" alt="Kathys bw store">
+    </div>
+    <!--About image end-->
+
+    <!--Footer start-->
+    <footer>
+        <div class="container-fluid footer-container">
+            <div class="icons-container">
+                <ul class="social-media-icons">
+                    <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                </ul>
+            </div>
+            
+            <div class="copyright">
+                <p style="text-align: center;"><i class="fa-regular fa-copyright"></i> 2023, Kathy's beauty & wellness</p>
+            </div>
+        </div>
+    </footer>
+    <!--Footer-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
