--- a/pages/Contact-page.html
+++ b/pages/Contact-page.html
@@ -77,6 +77,24 @@
 
     <!--Google map end-->
 
+        <!--Footer start-->
+        <footer>
+            <div class="container-fluid footer-container bg-light">
+                <div class="icons-container">
+                    <ul class="social-media-icons">
+                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    </ul>
+                </div>
+                
+                <div class="copyright">
+                    <p style="text-align: center;"><i class="fa-regular fa-copyright"></i> 2023, Kathy's beauty & wellness</p>
+                </div>
+            </div>
+        </footer>
+        <!--Footer end-->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
