--- a/pages/Services-page.html
+++ b/pages/Services-page.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../Css/style.css">
     <!--Responsive-->
     <link rel="stylesheet" href="../Css/style1.css">
+    <!--Font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!--Navigation Start-->
@@ -71,7 +73,7 @@
 
             <div class="col-lg-4 col-sm-12">
                 <div class="card">
-                    <img src="../photos/lip-tattoo.avif" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/lip-tattoo.avif" class="card-img-top" alt="Lip tattoo">
                     <div class="card-body">
                       <h5 class="card-title">Lip Tattoo</h5>
                       <p class="card-text">"Kissable lips, eternally stunning."</p>
@@ -82,7 +84,7 @@
 
             <div class="col-lg-4 col-sm-12">
                 <div class="card">
-                    <img src="../photos/eye-liner.avif" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/eye-liner.avif" class="card-img-top" alt="Eye liner">
                     <div class="card-body">
                       <h5 class="card-title">Eyeliner</h5>
                       <p class="card-text">"Enhancing gazes, effortlessly."</p>
@@ -101,7 +103,7 @@
         <div class="row">
             <div class="col-lg-4 col-sm-12">
                 <div class="card">
-                    <img src="../photos/bb-glow.avif" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/bb-glow.avif" class="card-img-top" alt="Korean BB glow">
                     <div class="card-body">
                       <h5 class="card-title">Korean BB glow</h5>
                       <p class="card-text">"Radiant skin in an instant with Korean BB Glow!"</p>
@@ -112,7 +114,7 @@
 
             <div class="col-lg-4 col-sm-12">
                 <div class="card">
-                    <img src="../photos/bb blush.jpg" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/bb blush.jpg" class="card-img-top" alt="Korean BB blush">
                     <div class="card-body">
                       <h5 class="card-title">Korean BB blush</h5>
                       <p class="card-text">"Get that natural flush with Korean BB Blush!"</p>
@@ -123,7 +125,7 @@
 
             <div class="col-lg-4 col-sm-12">
                 <div class="card">
-                    <img src="../photos/microneedling.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/microneedling.png" class="card-img-top" alt="Microneedling">
                     <div class="card-body">
                       <h5 class="card-title">Microneedling</h5>
                       <p class="card-text">"Transform your skin with Microneedling!"</p>
@@ -142,7 +144,7 @@
         <div class="row">
             <div class="col-lg-4 col-sm-12">
                 <div class="card">
-                    <img src="../photos/Gel-mani-pedi.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/Gel-mani-pedi.png" class="card-img-top" alt="Gel manicure & pedicure">
                     <div class="card-body">
                       <h5 class="card-title">Gel Manicure & Pedicure</h5>
                       <p class="card-text">"Polished Perfection: Gel Mani-Pedi"</p>
@@ -153,7 +155,7 @@
 
             <div class="col-lg-4 col-sm-12">
                 <div class="card">
-                    <img src="../photos/foot-spa-massage.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/foot-spa-massage.png" class="card-img-top" alt="Foot spa">
                     <div class="card-body">
                       <h5 class="card-title">Foot Spa</h5>
                       <p class="card-text">"Rejuvenate with a Luxurious Foot Spa"</p>
@@ -164,7 +166,7 @@
 
             <div class="col-lg-4 col-sm-12">
                 <div class="card">
-                    <img src="../photos/hand-spa.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/hand-spa.png" class="card-img-top" alt="Hand spa">
                     <div class="card-body">
                       <h5 class="card-title">Hand spa</h5>
                       <p class="card-text">"Hand Bliss: Revitalize with a Spa Treatment"</p>
@@ -183,7 +185,7 @@
         <div class="row">
             <div class="col-lg-4 col-sm-12">
                 <div class="card">
-                    <img src="../photos/natural-eye.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/natural-eye.png" class="card-img-top" alt="Natural eye">
                     <div class="card-body">
                       <h5 class="card-title">Natural Eye</h5>
                       <p class="card-text">"Effortless Elegance: Natural Eye Lash Extensions"</p>
@@ -194,7 +196,7 @@
 
             <div class="col-lg-4 col-sm-12">
                 <div class="card">
-                    <img src="../photos/classic-eye.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/classic-eye.png" class="card-img-top" alt="classic-eye">
                     <div class="card-body">
                       <h5 class="card-title">Classic Eye</h5>
                       <p class="card-text">"Timeless Glam: Classic Eyelash Extensions"</p>
@@ -205,7 +207,7 @@
 
             <div class="col-lg-4 col-sm-12">
                 <div class="card">
-                    <img src="../photos/open-eye.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/open-eye.png" class="card-img-top" alt="open-eye">
                     <div class="card-body">
                       <h5 class="card-title">Open Eye</h5>
                       <p class="card-text">"Bold & Beautiful: Open Eye Lash Extensions"</p>
@@ -216,7 +218,7 @@
 
             <div class="col-lg-4 col-sm-12 mt-3">
                 <div class="card">
-                    <img src="../photos/cat-eye.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/cat-eye.png" class="card-img-top" alt="cat-eye">
                     <div class="card-body">
                       <h5 class="card-title">Cat Eye</h5>
                       <p class="card-text">"Feline Flair: Cat-Eye Lash Extensions"</p>
@@ -227,7 +229,7 @@
 
             <div class="col-lg-4 col-sm-12 mt-3">
                 <div class="card">
-                    <img src="../photos/doll-eye.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/doll-eye.png" class="card-img-top" alt="doll-eye">
                     <div class="card-body">
                       <h5 class="card-title">Doll Eye</h5>
                       <p class="card-text">"Doll-Like Charm: Doll-Eye Lash Extensions"</p>
@@ -238,7 +240,7 @@
 
             <div class="col-lg-4 col-sm-12 mt-3">
                 <div class="card">
-                    <img src="../photos/volume-eye.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/volume-eye.png" class="card-img-top" alt="volume-eye">
                     <div class="card-body">
                       <h5 class="card-title">Volume Eye</h5>
                       <p class="card-text">"Luxurious Volume: Volume-Eye Lash Extensions"</p>
@@ -257,7 +259,7 @@
         <div class="row">
             <div class="col-lg-4 col-sm-12">
                 <div class="card">
-                    <img src="../photos/Gluta-drip.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/Gluta-drip.png" class="card-img-top" alt="Gluta-drip">
                     <div class="card-body">
                       <h5 class="card-title">Glutathione Drip</h5>
                       <p class="card-text">"Detox & Rejuvenate: Glutathione Drip"</p>
@@ -268,7 +270,7 @@
 
             <div class="col-lg-4 col-sm-12">
                 <div class="card">
-                    <img src="../photos/Gluta-push.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/Gluta-push.png" class="card-img-top" alt="Gluta-push">
                     <div class="card-body">
                       <h5 class="card-title">Glutathione Push</h5>
                       <p class="card-text">"Boost Your Glow: Glutathione Push"</p>
@@ -279,7 +281,7 @@
 
             <div class="col-lg-4 col-sm-12">
                 <div class="card">
-                    <img src="../photos/skinny-drip.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/skinny-drip.png" class="card-img-top" alt="skinny-drip">
                     <div class="card-body">
                       <h5 class="card-title">Skinny Drip</h5>
                       <p class="card-text">"Streamlined Beauty: Skinny Drip"</p>
@@ -290,7 +292,7 @@
 
             <div class="col-lg-4 col-sm-12 mt-3">
                 <div class="card">
-                    <img src="../photos/vitamin-drip.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/vitamin-drip.png" class="card-img-top" alt="vitamin-drip">
                     <div class="card-body">
                       <h5 class="card-title">Vitamin Drip</h5>
                       <p class="card-text">"Revitalize & Recharge: Vitamin Drip"</p>
@@ -301,7 +303,7 @@
 
             <div class="col-lg-4 col-sm-12 mt-3">
                 <div class="card">
-                    <img src="../photos/collagen-drip.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/collagen-drip.png" class="card-img-top" alt="collagen-drip">
                     <div class="card-body">
                       <h5 class="card-title">Collagen Drip</h5>
                       <p class="card-text">"Youthful Radiance: Collagen Drip"</p>
@@ -312,7 +314,7 @@
 
             <div class="col-lg-4 col-sm-12 mt-3">
                 <div class="card">
-                    <img src="../photos/Placenta.png" class="card-img-top" alt="Eyebrow Embroidery">
+                    <img src="../photos/Placenta.png" class="card-img-top" alt="Placenta">
                     <div class="card-body">
                       <h5 class="card-title">Placenta</h5>
                       <p class="card-text">"Renew & Restore: Placenta Treatment"</p>
@@ -323,6 +325,25 @@
     <!--IV Infusion Therapy end-->
 
     <!--Services end-->
+
+        <!--Footer start-->
+        <footer>
+            <div class="container-fluid footer-container bg-light">
+                <div class="icons-container">
+                    <ul class="social-media-icons">
+                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    </ul>
+                </div>
+                
+                <div class="copyright">
+                    <p style="text-align: center;"><i class="fa-regular fa-copyright"></i> 2023, Kathy's beauty & wellness</p>
+                </div>
+            </div>
+        </footer>
+        <!--Footer end-->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
